# Algorithms

./: .gitignore  README.md  main.py  package-lock.json  package.json  presets.py  pyproject.toml  requirements.md  view.py  wfc.py
Framework/: README.md  TODO.md  algorithm.py  button.py  console.py  controller.py  drawable.py  parameters.py  runner.py  timerClass.py  ui.py  uiSettings.py  uiparams.py
Framework/src/: button.py  controller.py  drawable.py  tilemap.py  timerClass.py  ui.py  uiSettings.py
GameOfLife/: README.md  TODO.md
GameOfLife/src/: GameOfLifeAlgorithm.py  gameoflifeparams.py  run.py
TravellingSalesMan/: TODO.md  TSMAlgorithm.py  console.py  parameters.py  run.py  tsmparams.py  ui.py  uiparams.py
TravellingSalesman/: AntColonyOptimization.py  NOTES.md  README.md  TODO.md  TSMAlgorithm.py  pyproject.toml  run.py  tsmparams.py
TravellingSalesman/src/: AntColonyOptimization.py  TSMAlgorithm.py  run.py  tsmparams.py
TravellingSalesman/tests/: ACOTest.py  Mocks.py  testVars.py
WFCPython/: README.md  TODO.md
WFCPython/src/: Map.py  TUI.py  UIBoard.py  WFCAlgorithm.py  ruiTUI.py  run.py  wfcparams.py
WFCPython/tests/: test_cell.py
WFCTS/: .gitignore  README.md  package-lock.json  package.json
WFCTS/src/: playground.test.ts
WFCTS/types/: wfcTile.ts
WFCTS/ui/: wfcColours.ts  wfcUI.ts
WaveFunctionCollapse/: package-lock.json  package.json
python/src/: main.py  wfc.py
python/test/: test_cell.py
src/: main.py  wfc.py
test/: test_cell.py
ts/: runWfc.ts  wfcCell.ts  wfcMap.ts  wfcRule.ts  wfcTile.ts  wfcUI.ts
(+23 files in other folders)
