[tool.poetry]
name = "travellingsalesman"
version = "0.1.0"
description = ""
authors = ["Hein <h.h.l.huijskes@student.utwente.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
